# tic-tac-AI-QLearning

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.yml  generations_data.csv  pyproject.toml  ruff.toml  tictactoe_lookup.pkl
.github/workflows/: build.yml
.ipython/profile_default/: history.sqlite
models/: q_table.pkl
queries/: queries.ipynb
src/: config.py  main.py  simulate.py  test_minimax.py
src/ai/: genetic_ql_agent.py  genetic_trainer.py  gym.py  minimax.py  minimax_table.py  ql_agent.py  qlearning.py  smart_ai.py  train_multi.py  verify_perfect_play.py
src/benchmarks/: 02_minimax_vs_ql_50.py  03_train_with_random_params.py  04_generic_tournament.py  learning_curve_data.py  utils.py  validate_agent.py
src/game_logic/: board.py
src/gui/: renderer.py
src/gui/components/: board_component.py  config_component.py  graph_component.py  hud_component.py  menu_component.py
src/training/: genetic_trainer.py  gym.py
