[project]
name = "agente-minimax-tictactoe"
version = "0.1.0"
description = "Agente de Tres en Raya con Minimax y Pygame"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6.0",
    "numpy>=1.26.0",
]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "pre-commit>=3.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
